# tasha

./: .gitignore  LICENSE  LICENSE.md  README.md  actor.py  attributes.py  exceptions.py  go.mod  go.sum  main.go  metrics.py  player.py  pyproject.toml  requirements.txt  scratch.py  system.py  tasha.py  tashax.py  utility.py  utils.py
abilities/: abilities.go
actor/: actor.go
attributes/: attributes.go
cmd/: main.go  root.go
d20/: __init__.py  alignments.py  backgrounds.go  backgrounds.py  classes.go  classes.py  feats.go  feats.py  features.py  languages.py  lineages.py  metrics.py  multiclasses.go  multiclasses.py  proficiencies.py  senses.py  sizes.py  skills.go  species.go  species.py  spells.py  subclasses.py  subraces.py  types.py
docs/: LICENSE.md  README.md
record/: record.go
src/tasha/: __init__.py  __main__.py  actor.py  cli.py  css.py  settings.py  stylesheet.py  tasha.py  themes.py
src/tasha/d20/: __init__.py  backgrounds.py  classes.py  multiclasses.py  proficiencies.py  spells.py
tasha/: __init__.py  __main__.py  actor.py  attributes.py  pcutils.py  player.py  scratch.py  srd.py  srdutils.py  system.py  tasha.py  utils.py
tasha/d20/: __init__.py  classes.py  languages.py  spells.py
tasha/srd/: __init__.py  alignments.py  classes.py  feats.py  languages.py  metrics.py  proficiencies.py  races.py  skills.py  spells.py  subclasses.py
tests/: test_actor.py  test_tasha.py
utils/: utils.go
