[tool.poetry]
name = "tasha"
version = "0.8.7"
description = "Create characters for Dungeons & Dragons 5th edition (2024)."
authors = ["Marcus T Taylor <mtaylor9754@hotmail.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Role-Playing",
]


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mtttech/tasha/issues"

[tool.poetry.dependencies]
python = "^3.12"
dice = "^4.0.0"
rich = "^13.9.2"
toml = "^0.10.2"
click = "^8.2.1"

[tool.poetry.scripts]
tasha='tasha.cli:cli'


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
