[project]
name = "tasha"
version = "0.8.8"
description = "Create 5.5e Dungeons & Dragons characters."
authors = [
    { name = "Marcus T Taylor", email = "mtaylor9754@hotmail.com" }
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment :: Role-Playing",
]
requires-python = ">=3.12"
dependencies = [
    'dice',
    'rich',
    'toml',
    'click',
]

[project.urls]
Repository = "https://github.com/mtttech/tasha"
Issues = "https://github.com/mtttech/tasha/issues"


[project.scripts]
tasha='tasha.cli:cli'


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
